# Projective-volume-low-rank

./: .gitignore  CMakeLists.txt  README.md  makefile  pyproject.toml
pvlr/: CMakeLists.txt  __init__.py  extension.cc  extension.pyi  extension_test.py  pvlr.cc  pvlr.ccm  pvlr.h  pvlr_test.cc
src/: Main.f90  ModAppr.f90  ModMtrx.f90  ModPVLR.f90  ModVec.f90
src/incfiles/: ExampleA.f90
